--- a/LTM.Structure/WebUI/web-ui/src/app/home/home.component.html
+++ b/LTM.Structure/WebUI/web-ui/src/app/home/home.component.html
@@ -1,4 +1,4 @@
 <h1>Home</h1>
 <ul *ngFor="let product of products">
-    <li>{{product.Description}}</li>
+    <li>{{ product.description }}</li>
 </ul>
