--- a/LTM.Structure/WebUI/web-ui/src/app/login/login.component.html
+++ b/LTM.Structure/WebUI/web-ui/src/app/login/login.component.html
@@ -14,7 +14,7 @@
             <input type="password" class="form-control" name="password" [(ngModel)]="model.password" />
         </div>
         <div class="form-group">
-            <button class="btn btn-primary">Login</button>
+            <button class="btn btn-primary" (disabled)="isLoading">Login</button>
         </div>
     </form>
 </div>
