--- a/LTM.Structure/WebUI/web-ui/src/app/login/login.component.html
+++ b/LTM.Structure/WebUI/web-ui/src/app/login/login.component.html
@@ -4,7 +4,7 @@
         <br /> Senha: admin
     </div>
     <h2>Login</h2>
-    <form name="form" (ngSubmit)="login()">
+    <form name="form" (ngSubmit)="onSubmit()">
         <div class="form-group">
             <label for="username">Username</label>
             <input type="text" class="form-control" name="username" [(ngModel)]="model.username" />
@@ -15,6 +15,7 @@
         </div>
         <div class="form-group">
             <button class="btn btn-primary" (disabled)="isLoading">Login</button>
+            <span *ngIf="isLoading">Authenticating...</span>
         </div>
     </form>
 </div>
